speedtest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: speedtest-tracker
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
