speedtest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: speedtest
spec:
  ingressClassName: dmz-ingress
  tls:
    - hosts:
        - speedtest.golocal.dev
  rules:
    - host: speedtest.golocal.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: speedtest-tracker
                port:
                  name: http
